Fix spacing on definition lists

--- a/BForms.Docs/Scripts/BForms/Stylesheets/bforms.grid.scss
+++ b/BForms.Docs/Scripts/BForms/Stylesheets/bforms.grid.scss
@@ -515,6 +515,7 @@ a.btn {
 						white-space: nowrap;
 						font-weight: normal;
 						color: #aaa;
+						padding-right: 10px;
 					}
 					dd {
 						margin-left: 30%;
